--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<html>
-<head>
-</head>
-
-<body>
-<div>our first class</div>
-</br>
-<h2>our first class</h2>
-</body>
-</html>
+---
+layout: home
+title: Home
+---
